feat: audit change relevance and coverage in the code review
The review could only read the files the migration touched, so it could
neither tell migration work from an unrequested rewrite nor see a file
the modifier skipped. Both questions need the pristine baseline, which
was only used at the very end to render the diff view.

agents/shared/change_audit.py diffs the baseline against the migrated
workspace and classifies every file against per-pattern regex markers:

- changed with no legacy marker removed and no target-stack one added
  (scope creep until the reviewer ties it to the plan)
- a legacy marker re-added, or a fix the skills forbid such as
  --add-opens, reported as a regression
- untouched but still matching a legacy marker -- the coverage gap the
  review previously had no way to see
- nothing changed at all, which is now a CRITICAL headline finding
  whatever the modify and build results claim

Markers are recall-biased evidence, not verdicts: the code-review skill
now opens with the audit and requires each candidate to be adjudicated
against the confirmed plan, since a stage boundary or a declined toggle
legitimately leaves files alone. The Jakarta markers cover only Jakarta
EE packages, so Java SE javax.sql/naming/crypto/JAXP and JSR-107
javax.cache are never flagged as an unfinished rename.

Wired through the shared reviewer factory, so all five patterns get it;
the review gains a Change Relevance section and the Java report a
Migration Coverage section that takes the audit over the modifier's own
account of its work.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>